2007-08-05  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp (choose-frame-by-number): handle an error in read-from-string

2007-08-02  Shawn Betts  <sabetts@shitbender.gagrod>

	* core.lisp (resize-frame): fix up crusty debug output

2007-07-31  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp (time-lambda): new macro
	(*month-names*): new defvar
	(*day-names*): likewise
	(*format-time-string-alist*): likewise
	(*format-time-string-default*): likewise
	(format-time-string): return a formatted date-time string givena
	format string.
	(get-edge): new function
	(find-closest-frame): remove function
	(neighbour): new function
	("move-focus"): use neighbour to find destination frame

	* primitives.lisp (string-to-utf8): new function

	* core.lisp (netwm-group-id): new function
	(switch-to-group): update netwm current desktop property
	(move-window-to-group): update window's netwm desktop property
	(netwm-update-groups): new function
	(kill-group): call netwm-update-groups
	(netwm-set-group-properties): new function
	(add-group): call netwm-set-group-properties
	(group-add-window): update window's netwm desktop property
	(netwm-remove-window): new function
	(withdraw-window): call netwm-remove-window
	(netwm-set-properties): rename from net-set-properties. add netwm
	desktop properties.
	(init-screen): call netwm-set-properties
	(:client-message): new event handler

2007-07-30  Shawn Betts  <sabetts@shitbender.gagrod>

	* stumpwm.lisp (stumpwm-internal-loop): debug output the length of the timeout

2007-07-26  Shawn Betts  <sabetts@shitbender.gagrod>

	* configure.ac: check for makeinfo

2007-07-06  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (withdraw-window): raise a new window in the old window's frame.

2007-06-22  Shawn Betts  <sabetts@vcn.bc.ca>

	* primitives.lisp (*top-level-error-hook*): new global

	* stumpwm.lisp (stumpwm-internal-loop): call *top-level-error-hook* when an error occurs.

2007-06-13  Shawn Betts  <sabetts@shitbender.gagrod>
